--- a/VikTeX.tex
+++ b/VikTeX.tex
@@ -24,10 +24,10 @@
 
 \mainmatter \defaultHeader
 
-%\include{chapters/1_0_part1}
+\include{chapters/1_0_part1}
 \include{chapters/1_1_introduction}
 \include{chapters/1_2_background}
-%\include{chapters/2_0_part2}
+\include{chapters/2_0_part2}
 \include{chapters/2_1_discussion}
 \include{chapters/2_2_conclusion}
 
