modified bat compile file

--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -1,5 +1,5 @@
 \chapter{Abstract}
-\cabeceraEspecial{Abstract}
+\markerHeader{Abstract}
 
 \newquote{I invent, transform, create and destroy for a living and when I don't like something about the World I change it.}{Rick and Morty -  Dan Harmon, Justin Roiland}
 
@@ -9,7 +9,7 @@
 
 
 \chapter{Resumen}
-\cabeceraEspecial{Resumen}
+\markerHeader{Resumen}
 
 \newquote{We do what we must because we can.}{GLaDOS - Portal.}
 
