--- a/includes/acknowledgements.tex
+++ b/includes/acknowledgements.tex
@@ -1,5 +1,5 @@
 \chapter{Acknowledgements}
-\cabeceraEspecial{Acknowledgements}
+\markerHeader{Acknowledgements}
 
 \newquote{I find your lack of faith disturbing}{Darth Vader, Star Wars: A New Hope.}
 
