--- a/includes/bibliography.tex
+++ b/includes/bibliography.tex
@@ -24,7 +24,7 @@
 \bibliographystyle{IEEEtran}
 \bibliography{\bibfiles}
 \endgroup
-\cabeceraEspecial{Bibliography}
+\markerHeader{Bibliography}
 
 
 %%%
