--- a/includes/customCommands.tex
+++ b/includes/customCommands.tex
@@ -46,7 +46,7 @@
 }
 \renewcommand{\sectionmark}[1]{\markright{\thesection.\ #1}}
 
-\newcommand{\cabeceraEspecial}[1]{
+\newcommand{\markerHeader}[1]{
 \fancyhead[LO]{\textsc{#1}} 
 \fancyhead[RE]{\textsc{#1}}
 }
