--- a/includes/indexes.tex
+++ b/includes/indexes.tex
@@ -7,20 +7,20 @@
 
 \pdfbookmark{Indexes}{indexes}
 \pdfbookmark[1]{Table of contents}{table of contents}
-\cabeceraEspecial{Index}
+\markerHeader{Index}
 
 \tableofcontents
 
 \cleardoublepage
 
 \pdfbookmark[1]{Index of figures}{index of figures}
-\cabeceraEspecial{Index of Figures}
+\markerHeader{Index of Figures}
 
 \listoffigures
 
 \cleardoublepage
 \pdfbookmark[1]{Index of tables}{index of tables}
-\cabeceraEspecial{Index of tables}
+\markerHeader{Index of tables}
 \listoftables
 
 %%%
